# teehistorian-py

./: .gitignore  404.html  Cargo.toml  README.md  build.rs  codecov.yml  deny.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  sitemap.xml
.benchmarks/Darwin-CPython-3.14-64bit/: 0001_baseline.json
.github/workflows/: benchmark.yml  build.yml  dependency-bump.yml  docs.yml  pr-checks.yml  security.yml
api/chunks/: index.html
api/errors/: index.html
api/parser/: index.html
api/writer/: index.html
benchmarks/: test_benchmarks.py
changelog/: index.html
contributing/: index.html
dev/bench/: data.js
docs/: changelog.md  index.md
docs/api/: errors.md  parser.md  writer.md
docs/getting-started/: writing.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/writing/: index.html
guide/basic-usage/: index.html
guide/chunk-types/: index.html
guide/error-handling/: index.html
search/: search_index.json
src/: chunks.rs  encoding.rs  errors.rs  handlers.rs  lib.rs  macros.rs  net_msg.rs  registry.rs  writer.rs
src/python/teehistorian_py/: __init__.py  _rust.pyi  chunks.py  protocols.py  teehistorian_py.pyi  utils.py  validators.py
tests/: test_coverage_extended.py  test_exact_match.py  test_exceptions.py  test_header_diff.py  test_metadata.py  test_metadata_roundtrip.py  test_msg_id.py  test_parser_roundtrip.py  test_teehistorian.py  test_utils.py  test_validators.py  test_writer_roundtrip.py
tests/rust/: parser_integration.rs  test_libtw2_encoding.rs  writer_integration.rs
tools/: README.md  pyproject.toml
tools/shared/: pyproject.toml
tools/shared/teehistorian_shared/: __init__.py  config.py  exceptions.py
tools/teehistorian-demo/: pyproject.toml
tools/teehistorian-demo/teehistorian_demo/: __init__.py  __main__.py  converter.py
tools/teehistorian-downloader/: pyproject.toml
tools/teehistorian-downloader/teehistorian_downloader/: __init__.py  __main__.py  downloader.py
tools/teehistorian-header/: pyproject.toml
tools/teehistorian-header/teehistorian_header/: __init__.py  __main__.py  header.py
tools/teehistorian-map/: pyproject.toml
tools/teehistorian-map/teehistorian_map/: __init__.py  __main__.py  map_downloader.py
