[package]
name = "teehistorian-py"
version = "2025.2.3"
edition = "2024"
authors = ["Avolicious <avolicious@kog.tw>"]
description = "High-performance Python bindings for teehistorian parsing"
license = "AGPL-3.0-or-later"
repository = "https://github.com/KoG-teeworlds/teehistorian-py"
documentation = "https://docs.rs/teehistorian-py"
keywords = ["teeworlds", "parser", "python", "bindings", "gaming"]
categories = ["parsing", "api-bindings", "game-development"]
readme = "README.md"
build = "build.rs"

[lib]
name = "teehistorian_py"
crate-type = ["cdylib"]

[dependencies]
# Core dependencies
pyo3 = { version = "0.27", features = ["extension-module"] }
teehistorian = "0.12"

# Network message parsing
pre-rfc3243-libtw2-gamenet-ddnet = "0.1"
pre-rfc3243-libtw2-gamenet-teeworlds-0-7 = "0.1"
pre-rfc3243-libtw2-packer = "0.1"
warn = "0.2"

# Logging
log = "0.4"

# Error handling
thiserror = "2.0"

uuid = "1.4"

# Data structures
indexmap = { version = "2.6", optional = true }
smallvec = { version = "1.13", optional = true }

# Serialization
serde = "1.0"
serde_json = { version = "1.0" }

# Macro utilities
pastey = "0.1"

# Safe self-referential structures (eliminates Box::leak)
ouroboros = "0.18"

# Threading and synchronization
parking_lot = "0.12"
once_cell = "1.19"

[build-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[features]
default = []
performance = ["indexmap", "smallvec"]
full = ["performance"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug-assertions = false

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
debug = true

[profile.bench]
inherits = "release"

[[test]]
name = "parser_integration"
path = "tests/rust/parser_integration.rs"

[[test]]
name = "writer_integration"
path = "tests/rust/writer_integration.rs"

[package.metadata.maturin]
python-source = "src/python"
module-name = "teehistorian_py._rust"
include = [
    "Cargo.toml",
    "src/**/*.rs",
    "src/python/**/*.py",
    "src/python/**/*.pyi",
    "README.md",
    "LICENSE",
]
exclude = [
    "target/",
    "*.so",
    "*.dylib",
    "*.dll",
    "*.pyd",
    "__pycache__",
    ".pytest_cache",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
