[project]
name = "teehistorian-shared"
version = "0.1.0"
description = "Shared utilities for teehistorian tools"
requires-python = ">=3.8"
dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["teehistorian_shared"]
