[project]
name = "teehistorian-downloader"
version = "0.1.0"
description = "Download teehistorian files from S3/Minio"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.28.0",
    "teehistorian-shared",
]

[project.scripts]
teehistorian-downloader = "teehistorian_downloader.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["teehistorian_downloader"]

[tool.uv.sources]
teehistorian-shared = { workspace = true }
