[project]
name = "teehistorian-header"
version = "0.1.0"
description = "Parse and display teehistorian file headers"
requires-python = ">=3.8"
dependencies = [
    "teehistorian-py>=2.0.0",
]

[project.scripts]
teehistorian-header = "teehistorian_header.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["teehistorian_header"]
