[project]
name = "teehistorian-map"
version = "0.1.0"
description = "Download map files from S3/R2 based on teehistorian headers"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.28.0",
    "teehistorian-shared",
    "teehistorian-header",
]

[project.scripts]
teehistorian-map = "teehistorian_map.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["teehistorian_map"]

[tool.uv.sources]
teehistorian-shared = { workspace = true }
teehistorian-header = { workspace = true }
